@@ -263,7 +263,7 @@
       <dictionary>
         <item>
             <key> <string>_text</string> </key>
-            <value> <string>python: here.getVariationRangeBaseCategoryItemList(omit_optional_variation=1)</string> </value>
+            <value> <string>python: here.getVariationRangeBaseCategoryItemList(omit_optional_variation=1, display_id=\'translated_title\')</string> </value>
         </item>
       </dictionary>
     </pickle>
