@@ -1,3 +1,6 @@
+2011-05-17 yusei
+* Pass display_id='translated_title' to all getVariationRangeBaseCategoryItemList call. Category titles in variation category list must be always translated.
+
 2010-10-19 yo
 * Specify Acquisition Portal Types to industrial_phase.
 
